--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         
             <div id="logo">
-                <img src="logo.png" />
+                <img src="img/logo.png" />
             </div>
         </div>
         <div id="quote" class="clear">
